k8s-webtop-cluster/webtop-template.yaml
---
# Namespace for user webtops
apiVersion: v1
kind: Namespace
metadata:
  name: webtops
---
# Webtop Deployment Template
# This will be used for each user instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop-USERNAME
  namespace: webtops
  labels:
    app: webtop
    user: USERNAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop
      user: USERNAME
  template:
    metadata:
      labels:
        app: webtop
        user: USERNAME
    spec:
      containers:
      - name: webtop
        image: lscr.io/linuxserver/webtop:alpine-kde
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        securityContext:
          privileged: false
          capabilities:
            add:
            - NET_ADMIN
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: webtop-USERNAME-pvc
---
# Service for Webtop
apiVersion: v1
kind: Service
metadata:
  name: webtop-USERNAME-svc
  namespace: webtops
  labels:
    app: webtop
    user: USERNAME
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: webtop
    user: USERNAME
---
# Ingress for Webtop with SSL
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop-USERNAME-ingress
  namespace: webtops
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: USERNAME.apps.haiocloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webtop-USERNAME-svc
            port:
              number: 3000
  tls:
  - hosts:
    - USERNAME.apps.haiocloud.com
    secretName: webtop-USERNAME-tls
